--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>my first ever git hub repo</title>
 </head>
 <body>
-    
+    <div>
+        <h3>First git</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique saepe dolorem unde quia expedita nisi eum officia magni nostrum hic!</p>
+    </div>
 </body>
 </html>
